test/openshift/e2e/sequential/1-087_validate_default_argocd_route/01-setup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
# patch the Argo CD CR to revert any updates from other tests.
- script: |
    kubectl patch argocd openshift-gitops -n openshift-gitops --type='json' -p='[{"op": "remove", "path": "/spec/server/route/tls"}]'
- script: sleep 30
