test/openshift/e2e/sequential/1-087_validate_default_argocd_route/01-assert.yaml
apiVersion: argoproj.io/v1alpha1
kind: ArgoCD
metadata:
  name: openshift-gitops
  namespace: openshift-gitops
spec:
  server:
    route:
      enabled: true  
status:
  phase: Available
---

# Verify if the argocd-server-tls secret is created by the OpenShift's service CA.
apiVersion: v1
kind: Secret
metadata:
  name: argocd-server-tls
  namespace: openshift-gitops
  annotations:
    openshift.io/description: 'Secret contains a pair signed serving certificate/key that is generated by Service CA operator for service/openshift-gitops-server with hostname openshift-gitops-server.openshift-gitops.svc and is annotated to the service with annotating a service resource with ''service.beta.openshift.io/serving-cert-secret-name: argocd-server-tls''. The certificate is valid for 2 years.'
    openshift.io/owning-component: service-ca
    service.beta.openshift.io/originating-service-name: openshift-gitops-server
type: kubernetes.io/tls
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-gitops-server
  namespace: openshift-gitops
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: openshift-gitops-server
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
